# Kajam-10

./: .gitignore  CMakeLists.txt
assets/: config.json  logo.ase  palette.gpl
src/: config.json
src/Game/Client/: ClientProperties.cpp  ClientProperties.hpp  Explosion.cpp  Explosion.hpp  ExplosionManager.cpp  ExplosionManager.hpp  Hud.cpp  Hud.hpp  NetworkClient.cpp  NetworkClient.hpp  Parallax.cpp  Parallax.hpp  Player.cpp  Player.hpp  StateGame.cpp  StateGame.hpp  StateMenu.cpp  StateMenu.hpp  main.cpp
src/Game/Common/: Config.cpp  Config.hpp  Conversions.cpp  Conversions.hpp  EnemyAI.cpp  EnemyAI.hpp  EnemyMover.cpp  EnemyMover.hpp  EnemyState.cpp  EnemyState.hpp  ExplosionState.cpp  ExplosionState.hpp  GameProperties.cpp  GameProperties.hpp  InputState.hpp  Payloads.cpp  Payloads.hpp  PlayerShotSpawner.cpp  PlayerShotSpawner.hpp  PlayerState.cpp  PlayerState.hpp  PowerupState.cpp  PowerupState.hpp  PredictedMove.hpp  ShotPattern.hpp  ShotState.cpp  ShotState.hpp  common.cpp  common.hpp
src/Game/Server/: ConnectionManager.cpp  ConnectionManager.hpp  EnemySpawner.cpp  EnemySpawner.hpp  GameServer.cpp  GameServer.hpp  NetworkServer.cpp  NetworkServer.hpp  PlayerShotSpawner.cpp  PlayerShotSpawner.hpp  main.cpp
src/JamTemplate/common/: Bar.cpp  Bar.hpp  CircularBuffer.hpp  Random.cpp  Random.hpp  Soundgroup.cpp
src/JamTemplate/sfml/: Sprite.hpp
